<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.1</version>
    </parent>
    <groupId>com.witboot</groupId>
    <artifactId>witboot</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <name>WitBoot</name>
    <description>WitBoot</description>

    <properties>
        <java.version>17</java.version>
        <spring-boot.version>3.0.6</spring-boot.version>
        <arthas.version>3.4.8</arthas.version>
        <common-io.version>2.7</common-io.version>
        <druid-spring-boot-starter.version>1.2.18</druid-spring-boot-starter.version>
        <pagehelper.version>1.4.7</pagehelper.version>
        <mybatis-spring-boot-starter.version>3.0.4</mybatis-spring-boot-starter.version>
        <cola.version>5.0.0</cola.version>
        <validation-api.version>2.0.0.Final</validation-api.version>
        <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
        <jjwt.version>0.11.5</jjwt.version>
        <knife4j-openapi3-jakarta-spring-boot-starter.version>4.5.0</knife4j-openapi3-jakarta-spring-boot-starter.version>
        <hutool.version>5.8.26</hutool.version>
    </properties>

    <modules>
        <module>witboot-start</module>
        <module>witboot-client</module>
        <module>witboot-domain</module>
        <module>witboot-app</module>
        <module>witboot-adapter</module>
        <module>witboot-infrastructure</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!--COLA-->
            <dependency>
                <groupId>com.alibaba.cola</groupId>
                <artifactId>cola-component-domain-starter</artifactId>
                <version>${cola.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cola</groupId>
                <artifactId>cola-component-exception</artifactId>
                <version>${cola.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cola</groupId>
                <artifactId>cola-component-dto</artifactId>
                <version>${cola.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cola</groupId>
                <artifactId>cola-component-catchlog-starter</artifactId>
                <version>${cola.version}</version>
            </dependency>
            <!--COLA End-->

            <dependency>
                <groupId>com.taobao.arthas</groupId>
                <artifactId>arthas-spring-boot-starter</artifactId>
                <version>${arthas.version}</version>
                <type>jar</type>
            </dependency>

            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring-boot-starter.version}</version>
                <type>jar</type>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${common-io.version}</version>
                <type>jar</type>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid-spring-boot-starter.version}</version>
            </dependency>

            <!--Validation API-->
            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>${validation-api.version}</version>
            </dependency>

            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <!--Validation API -->

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <!-- JWT -->

            <!-- API文档-swagger -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j-openapi3-jakarta-spring-boot-starter.version}</version>
                <type>pom</type>
            </dependency>
            <!-- API文档-swagger -->

            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <dependency>
                <groupId>com.witboot</groupId>
                <artifactId>witboot-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.witboot</groupId>
                <artifactId>witboot-app</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.witboot</groupId>
                <artifactId>witboot-client</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.witboot</groupId>
                <artifactId>witboot-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.witboot</groupId>
                <artifactId>witboot-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
